--- a/wp-content/themes/the-tomorrow/_/css/style.css
+++ b/wp-content/themes/the-tomorrow/_/css/style.css
@@ -194,7 +194,10 @@ html {
   font-size: 100%;
 }
 body {
+  font-family: "adelle-sans";
+  font-weight: 300;
   -webkit-font-smoothing: antialiased;
+  /* body strong { font-weight: 700; } */
 }
 img {
   border: 0;
@@ -247,45 +250,12 @@ br.clear {
 }
 body {
   font: 12px/1.3 Arial, Helvetica, sans-serif;
-  color: #000;
+  color: #191919;
   text-align: center;
   /*link*/
 }
 a, a:hover {
   text-decoration: none;
-  /* struttura  */
-}
-#wrapper {
-  text-align: left;
-}
-#page {
-  margin: 0 10px;
-  padding-top: 10px;
-}
-footer {
-  margin-bottom: 40px;
-  height: 50px;
-}
-#content {
-  background: #fff;
-  /* float:left; */
-}
-#sidebar {
-  padding: 10px 0;
-  float: right;
-}
-#sidebarLeft {
-  float: left;
-}
-#sidebarRight {
-  float: right;
-}
-#main_content #post_col {
-  float: right;
-  margin-bottom: 30px;
-}
-#main_content #page_col {
-  float: right;
   /************************************************
 *	Header  									*
 ************************************************/
@@ -303,7 +273,7 @@ header.main {
                                     filter nav                                   */
 }
 header.main .inner {
-  width: 1000px;
+  width: 988px;
   height: 140px;
   margin: 0 auto;
   position: relative;
@@ -366,7 +336,7 @@ header.main .nav_menu li.nav_menu_menu a {
   display: none;
 }
 #filter_nav .form {
-  width: 1000px;
+  width: 988px;
   height: 68px;
   margin: 0 auto;
   position: relative;
@@ -390,6 +360,7 @@ header.main .nav_menu li.nav_menu_menu a {
   font-size: 18px;
   padding: 0;
   margin: 0;
+  background: none;
 }
 #filter_nav .form div.filter label {
   font-family: "adelle-sans";
@@ -632,12 +603,12 @@ header.main .nav_menu li.nav_menu_menu a {
 #main_search {
   background: #f6f6f6;
   height: 80px;
-  display: block;
+  display: none;
   /* --------------------------------------------------------------------------------
                                     mega menu                                    */
 }
 #main_search .form {
-  width: 1000px;
+  width: 988px;
   height: 54px;
   margin: 0 auto;
   position: relative;
@@ -646,7 +617,7 @@ header.main .nav_menu li.nav_menu_menu a {
 #main_search .form input.submit {
   width: 16px;
   height: 16px;
-  background: #fff url('../i/ico_main_search.png') no-repeat 0 0;
+  background: url('../i/ico_main_search.png') no-repeat 0 0;
   font-size: 0;
   text-indent: -999999px;
   display: inline-block;
@@ -665,6 +636,7 @@ header.main .nav_menu li.nav_menu_menu a {
   font-size: 18px;
   padding: 0;
   margin: 0;
+  background: none;
 }
 nav#megamenu {
   background: #606a70;
@@ -679,7 +651,7 @@ nav#megamenu {
   display: none;
 }
 nav#megamenu .inner {
-  width: 998px;
+  width: 988px;
   margin: 0 auto;
   text-align: left;
 }
@@ -706,24 +678,8 @@ nav#megamenu .megahead .close {
   float: right;
   margin-top: 7px;
 }
-nav#megamenu .logotipo {
-  font-size: 0;
-  text-indent: -999999px;
-  display: block;
-  width: 70px;
-  height: 35px;
-  background: url(../i/the_tomorrow_logotipo_fff.png) no-repeat 0 0;
-}
-nav#megamenu .close {
-  font-size: 0;
-  text-indent: -999999px;
-  display: block;
-  width: 20px;
-  height: 20px;
-  background: url(../i/ico_megamenu_close.png) no-repeat 0 0;
-}
 nav#megamenu .main_menu {
-  width: 998px;
+  width: 988px;
 }
 nav#megamenu .main_menu li {
   font-family: "adelle-sans";
@@ -734,7 +690,7 @@ nav#megamenu .main_menu a {
   color: #fff;
 }
 nav#megamenu .secondary-nav {
-  width: 998px;
+  width: 988px;
   border-top: 1px solid #fff;
   padding: 25px 0 50px 0;
   clear: both;
@@ -795,7 +751,7 @@ nav#megamenu .secondary-nav .secondary_menu .menu-social-links-container li a {
   background-position: center center;
 }
 nav#megamenu p.megamenu-footer {
-  width: 998px;
+  width: 988px;
   float: left;
   display: block;
   padding: 20px 0;
@@ -806,9 +762,129 @@ nav#megamenu p.megamenu-footer {
   position: absolute;
   top: 0px;
   left: 0px;
+  /* --------------------------------------------------------------------------------
+                                    internal page                                */
+}
+section.internal_page {
+  width: 988px;
+  margin: 0 auto;
+  text-align: left;
   /************************************************
 * POST    								        *
 ************************************************/
+}
+section.internal_page.venue_page header.main_internal_page_header {
+  width: 100%;
+  margin: 80px 0 30px 0;
+  border-bottom: 1px solid #414042;
+  padding-bottom: 20px;
+}
+section.internal_page.venue_page header.main_internal_page_header .address {
+  width: 220px;
+  margin: 0 36px 0 0;
+  float: left;
+  text-transform: uppercase;
+}
+section.internal_page.venue_page header.main_internal_page_header h1.venue_title {
+  font-family: "adelle-sans";
+  font-weight: 700;
+  font-size: 40px;
+  height: 1em;
+  line-height: 0.7em;
+}
+section.internal_page.venue_page .venue-events-calendar {
+  margin: 30px 0;
+}
+section.internal_page.venue_page .content_col {
+  width: 476px;
+  margin-left: 0;
+  margin-left: 256px;
+}
+section.internal_page.venue_page .content_col p {
+  margin-bottom: 10px;
+}
+section.internal_page.venue_page .content_col p, section.internal_page.venue_page .content_col li {
+  font-size: 20px;
+}
+section.internal_page.venue_page .content_col div.event {
+  display: none;
+}
+section.internal_page.venue_page .leftcol {
+  width: 220px;
+  margin: 0 36px 0 0;
+  float: left;
+}
+section.internal_page.venue_page .rightcol {
+  width: 190px;
+  margin: 0 0 0 0;
+  float: right;
+  border-top: 1px solid #414042;
+}
+section.internal_page.venue_page .rightcol .li {
+  border-bottom: 1px solid #414042;
+}
+section.internal_page.venue_page .rightcol .li a {
+  color: #191919;
+  text-indent: 10px;
+  padding: 20px 0;
+  text-transform: uppercase;
+  font-size: 14px;
+  display: block;
+  margin-right: 10px;
+  background-position: center right;
+  background-repeat: no-repeat;
+}
+section.internal_page.venue_page .rightcol .li.gallery a {
+  background-image: url(../i/ico_rightcol_gallery.png);
+}
+section.internal_page.venue_page .rightcol .li.expand a {
+  background-image: url(../i/ico_rightcol_expand.png);
+}
+section.internal_page.venue_page .rightcol .li.collapse a {
+  background-image: url(../i/ico_rightcol_collapse.png);
+}
+section.internal_page.venue_page .rightcol .li.map a {
+  background-image: url(../i/ico_rightcol_map.png);
+}
+section.internal_page.venue_page .rightcol .addthis {
+  border-bottom: 1px solid #414042;
+  padding: 20px 0;
+  float: left;
+  width: 100%;
+}
+section.internal_page.venue_page .rightcol .addthis p {
+  color: #191919;
+  text-indent: 10px;
+  text-transform: uppercase;
+  font-size: 14px;
+  display: block;
+  margin-right: 10px;
+  float: left;
+}
+section.internal_page.venue_page .rightcol .addthis .addthis_toolbox {
+  float: right;
+}
+section.internal_page.venue_page .rightcol .addthis .addthis_toolbox a {
+  width: 19px;
+  height: 15px;
+  font-size: 0;
+  text-indent: -999999px;
+  display: block;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin-left: 5px;
+}
+section.internal_page.venue_page .rightcol .addthis .addthis_toolbox a.addthis_button_facebook {
+  background-image: url(../i/ico_rightcol_share_facebook.png);
+}
+section.internal_page.venue_page .rightcol .addthis .addthis_toolbox a.addthis_button_twitter {
+  background-image: url(../i/ico_rightcol_share_twitter.png);
+}
+section.internal_page.venue_page .rightcol .addthis .addthis_toolbox a.addthis_button_email {
+  background-image: url(../i/ico_rightcol_share_email.png);
+}
+section.internal_page.venue_page .rightcol .addthis .at15t, section.internal_page.venue_page .rightcol .addthis .at16nc, section.internal_page.venue_page .rightcol .addthis .at300bs {
+  background: none;
 }
 .post {
   padding: 10px 0;
@@ -868,58 +944,112 @@ nav#megamenu p.megamenu-footer {
   /************************************************
 *	Sidebar      								*
 ************************************************/
-  /* titoli */
-}
-#sidebar h3 {
-  text-transform: uppercase;
-  margin: 0;
-  padding: 2px 0;
-}
-#sidebar h3 span {
-  /* i box sono di 190px */
-}
-.boxS {
-  margin: 0 0 20px 0px;
-}
-.boxD {
-  margin: 0 0px 20px 0;
-}
-.boxL {
-  margin: 0 0px 20px;
-  padding: 10px;
-}
-#sidebarLarge {
-  background: url("images/dot.gif") top repeat-x;
-}
-.boxL {
-  font-size: 12px;
-  line-height: 140%;
-  background: url("images/dot.gif") bottom repeat-x;
-}
-.boxS ul, .boxD ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-.boxS ul li, .boxD ul li {
-  martin: 2px 0;
-  pudding: 0;
   /************************************************
 *	Footer      								*
 ************************************************/
 }
 footer {
-  font-size: 11px;
-  margin: 0 10px;
-  position: relative;
-  background: #fff;
-  color: #666;
-}
-footer a {
-  color: #666;
+  background: #606a70;
+  text-align: center;
+  color: #fff;
+  padding: 35px 0 45px 0;
+  margin: 35px 0 0 0;
   /************************************************
 
 /* pagine */
+}
+footer p.disclaimer {
+  width: 988px;
+  margin: 0 auto;
+  text-align: left;
+  clear: both;
+  display: block;
+  border-top: 1px solid #fff;
+  padding: 10px 0 0 0;
+}
+footer .inner {
+  width: 988px;
+  margin: 0 auto;
+  text-align: left;
+  clear: both;
+  display: block;
+}
+footer .inner .info {
+  width: 200px;
+  float: left;
+  margin-right: 47px;
+  padding-bottom: 25px;
+}
+footer .inner .logo {
+  font-size: 0;
+  text-indent: -999999px;
+  display: block;
+  width: 29px;
+  height: 25px;
+  background: url(../i/the_tomorrow_logo_footer.png) no-repeat 0 0;
+  margin-bottom: 20px;
+}
+footer .inner .desc {
+  color: #fff;
+}
+footer .inner .secondary-nav {
+  width: 726px;
+  float: left;
+  padding-bottom: 25px;
+}
+footer .inner .secondary-nav h2.widgettitle {
+  display: none;
+}
+footer .inner .secondary-nav .secondary_menu {
+  float: left;
+  margin: 0;
+}
+footer .inner .secondary-nav .secondary_menu#nav_menu-5, footer .inner .secondary-nav .secondary_menu#nav_menu-6 {
+  margin-right: 0;
+}
+footer .inner .secondary-nav .secondary_menu#nav_menu-6 {
+  float: right;
+}
+footer .inner .secondary-nav .secondary_menu div {
+  width: 209px;
+  float: left;
+}
+footer .inner .secondary-nav .secondary_menu div li {
+  font-size: 14px;
+  margin-bottom: 25px;
+}
+footer .inner .secondary-nav .secondary_menu div li a {
+  color: #fff;
+}
+footer .inner .secondary-nav .secondary_menu .menu-social-links-container {
+  width: auto;
+}
+footer .inner .secondary-nav .secondary_menu .menu-social-links-container li, footer .inner .secondary-nav .secondary_menu .menu-social-links-container li a {
+  width: 28px;
+  height: 20px;
+}
+footer .inner .secondary-nav .secondary_menu .menu-social-links-container li {
+  margin-right: 38px;
+  margin-bottom: 16px;
+}
+footer .inner .secondary-nav .secondary_menu .menu-social-links-container li.menu-item-70 a {
+  background-image: url(../i/ico_megamenu_social_facebook.png);
+}
+footer .inner .secondary-nav .secondary_menu .menu-social-links-container li.menu-item-71 a {
+  background-image: url(../i/ico_megamenu_social_twitter.png);
+}
+footer .inner .secondary-nav .secondary_menu .menu-social-links-container li.menu-item-72 {
+  margin-right: 0;
+}
+footer .inner .secondary-nav .secondary_menu .menu-social-links-container li.menu-item-72 a {
+  background-image: url(../i/ico_megamenu_social_youtube.png);
+}
+footer .inner .secondary-nav .secondary_menu .menu-social-links-container li a {
+  font-size: 0;
+  text-indent: -999999px;
+  display: block;
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 h2.page-title {
   font-size: 20px;
@@ -974,6 +1104,7 @@ h2.page-title {
 }
 #home_grid .home_box.event {
   width: 239px;
+  text-align: left;
 }
 #home_grid .home_box.event .top {
   width: 88%;
@@ -1028,7 +1159,6 @@ h2.page-title {
   font-family: "adelle-sans";
   text-transform: uppercase;
   font-size: 11px;
-  height: 11px;
   font-weight: 700;
 }
 #home_grid .home_box.event .title {
@@ -1042,7 +1172,7 @@ h2.page-title {
   font-weight: 700;
 }
 #home_grid .home_box.event .title a, #home_grid .home_box.event .title strong a {
-  color: #000;
+  color: #191919;
 }
 #home_grid .home_box.event .bottom {
   height: 11px;
@@ -1070,6 +1200,7 @@ h2.page-title {
 }
 #home_grid .home_box.conversations {
   width: 479px;
+  text-align: left;
 }
 #home_grid .home_box.conversations .top {
   width: 94%;
@@ -1086,7 +1217,7 @@ h2.page-title {
 }
 #home_grid .home_box.conversations .top .title a {
   font-weight: 800;
-  color: #000;
+  color: #191919;
 }
 #home_grid .home_box.conversations .bottom {
   height: 11px;
