--- a/wp-content/themes/the-tomorrow/_/css/style.css
+++ b/wp-content/themes/the-tomorrow/_/css/style.css
@@ -261,16 +261,23 @@ a, a:hover {
 ************************************************/
 }
 header.main {
-  position: relative;
+  position: fixed;
   background: #606a70;
   color: #fff;
   height: 140px;
   text-align: center;
+  top: 0;
+  left: 0;
+  z-index: 9;
+  width: 100%;
   -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.8);
   -moz-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.8);
   box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.8);
-  /* --------------------------------------------------------------------------------
-                                    filter nav                                   */
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 header.main .inner {
   width: 988px;
@@ -285,6 +292,11 @@ header.main .inner h1, header.main .inner a {
 header.main .inner h1 {
   padding: 49px 80px 0 0;
   float: left;
+  -webkit-transition: padding-top 0.5s ease;
+  -moz-transition: padding-top 0.5s ease;
+  -o-transition: padding-top 0.5s ease;
+  -ms-transition: padding-top 0.5s ease;
+  transition: padding-top 0.5s ease;
 }
 header.main .inner h1 a {
   font-size: 0;
@@ -293,12 +305,18 @@ header.main .inner h1 a {
   background: url('../i/the_tomorrow_logo.png') no-repeat 0 0;
 }
 header.main .inner h2 {
-  height: 140px;
-  line-height: 140px;
+  height: 40px;
+  line-height: 40px;
   font-family: "adelle-sans";
   font-weight: 300;
   font-size: 16px;
   float: left;
+  margin-top: 50px;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 header.main .nav_menu {
   width: 168px;
@@ -306,6 +324,11 @@ header.main .nav_menu {
   position: absolute;
   top: 61px;
   right: 0;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 header.main .nav_menu li, header.main .nav_menu li a {
   width: 23px;
@@ -329,6 +352,32 @@ header.main .nav_menu li.nav_menu_menu {
 }
 header.main .nav_menu li.nav_menu_menu a {
   background-position: -46px 0;
+}
+body.scrolled header.main {
+  height: 90px;
+  /* --------------------------------------------------------------------------------
+                                    filter nav                                   */
+}
+body.scrolled header.main .inner {
+  height: 90px;
+}
+body.scrolled header.main .inner h1 {
+  padding-top: 28px;
+}
+body.scrolled header.main .inner h1 a {
+  font-size: 0;
+  text-indent: -999999px;
+  display: block;
+  width: 70px;
+  height: 35px;
+  background: url(../i/the_tomorrow_logotipo_fff.png) no-repeat 0 0;
+}
+body.scrolled header.main .inner h2 {
+  display: none;
+  margin-top: 35px;
+}
+body.scrolled header.main .nav_menu {
+  top: 34px;
 }
 #filter_nav {
   background: #f6f6f6;
@@ -642,10 +691,10 @@ nav#megamenu {
   background: #606a70;
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 10;
   color: #fff;
   text-align: center;
   display: none;
@@ -948,6 +997,9 @@ section.internal_page.venue_page .rightcol .addthis .at15t, section.internal_pag
 *	Footer      								*
 ************************************************/
 }
+body.home footer {
+  display: none;
+}
 footer {
   background: #606a70;
   text-align: center;
@@ -1087,11 +1139,20 @@ h2.page-title {
   /* home page
 */
 }
+body.scrolled #home_grid {
+  margin-top: 90px;
+}
 #home_grid {
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease;
   width: 100%;
   height: 100%;
   border-top: 1px solid #ccc;
   border-left: 1px solid #ccc;
+  margin-top: 140px;
   /* Print styles!
 -------------------------------------------------------------------------------*/
 }
