--- a/wp-content/themes/the-tomorrow/_/lib/scss/style.scss
+++ b/wp-content/themes/the-tomorrow/_/lib/scss/style.scss
@@ -71,10 +71,6 @@ body{
 //    #content { margin-top: 90px; }
 //    &.open-filters #content { margin-top: 170px }
 //  }
-  &.tax-event-venue{
-    #content { margin-top: 280px; }
-    &.open-filters #content { margin-top: 360px }
-  }
 }
 
 
@@ -275,49 +271,53 @@ nav#megamenu{
 	
 /* --------------------------------------------------------------------------------
                                     internal page                                */
-section.internal_page {
-  width: 988px; margin: 0 auto; text-align: left; padding: 80px 0 0 0;
+body.internal-page #content {
+  width: 988px; margin: 90px auto 0 auto; text-align: left; padding: 80px 0 0 0; background: #999px;
+
+  .rightcol{ width: 220px; margin: 0; float: right;
+    .li { border-top: 1px solid #414042;
+      a{ color: #191919; text-indent: 10px; padding: 20px 0; text-transform: uppercase; font-size: 14px; display: block; margin-right: 10px; background-position: center right; background-repeat: no-repeat; }
+      &.gallery a{ background-image: url(../i/ico_rightcol_gallery.png); }
+      &.expand a{ background-image: url(../i/ico_rightcol_expand.png); }
+      &.collapse a{ background-image: url(../i/ico_rightcol_collapse.png); }
+      &.map a{ background-image: url(../i/ico_rightcol_map.png); }
+      &.prev a{ background-image: url(../i/ico_rightcol_prev.png); }
+      &.next a{ background-image: url(../i/ico_rightcol_next.png); }
+    }      
+    .addthis { padding: 20px 0; float: left; width: 100%; border-top: 1px solid #414042;
+      p { color: #191919; text-indent: 10px; text-transform: uppercase; font-size: 14px; display: block; margin-right: 10px; float: left; }
+      .addthis_toolbox { float: right;
+        a { width: 19px; height: 15px; @include ir; background-position: center center; background-repeat: no-repeat; margin-left: 5px;
+          &.addthis_button_facebook { background-image: url(../i/ico_rightcol_share_facebook.png) }
+          &.addthis_button_twitter  { background-image: url(../i/ico_rightcol_share_twitter.png) }
+          &.addthis_button_email    { background-image: url(../i/ico_rightcol_share_email.png) }
+        }
+      }
+      .at15t, .at16nc, .at300bs { background: none }
+    }      
+  }
+
   &.venue_page{
     header.main_internal_page_header {
-      width: 100%; padding: 0 0 20px 0; border-bottom: 1px solid #414042;
+      width: 100%; padding: 0 0 20px 0; 
       .address { width: 220px; margin: 0 36px 0 0; float: left; text-transform: uppercase; }
       h1.venue_title{ font-family: "adelle-sans"; font-weight: 700; font-size: 40px; height: 1em; line-height: .7em; }
     }
     .col {  }
     .venue-events-calendar { margin: 30px 0; }
+    .rightcol{ }
     .content_col{
-      width: 476px; margin-left: 0; margin-left: 256px; padding-top: 26px;
+      width: 476px; margin-left: 0; margin-left: 220px; padding-top: 26px; padding-left: 36px; border-top: 1px solid #414042;
       p { margin-bottom: 10px; }
       p, li{ font-size: 20px; }
       div.event{ display: none }
     }
-    .leftcol { width: 220px; margin: 30px 36px 0 0; float: left; border-bottom: 1px solid #414042;
+    .leftcol { width: 220px; margin: 0 36px 0 0; padding-top: 30px; float: left; border-top: 1px solid #414042; border-bottom: 1px solid #414042;
       p{
         text-transform: uppercase; padding-bottom: 26px;
         a { color: $primary-color; }
       }
     }
-    .rightcol{ width: 190px; margin: 8px 0 0 0; float: right;
-      .li { border-bottom: 1px solid #414042;
-        a{ color: #191919; text-indent: 10px; padding: 20px 0; text-transform: uppercase; font-size: 14px; display: block; margin-right: 10px; background-position: center right; background-repeat: no-repeat; }
-        &.gallery a{ background-image: url(../i/ico_rightcol_gallery.png); }
-        &.expand a{ background-image: url(../i/ico_rightcol_expand.png); }
-        &.collapse a{ background-image: url(../i/ico_rightcol_collapse.png); }
-        &.map a{ background-image: url(../i/ico_rightcol_map.png); }
-      }      
-      .addthis { border-bottom: 1px solid #414042; padding: 20px 0; float: left; width: 100%;
-        p { color: #191919; text-indent: 10px; text-transform: uppercase; font-size: 14px; display: block; margin-right: 10px; float: left; }
-        .addthis_toolbox { float: right;
-          a { width: 19px; height: 15px; @include ir; background-position: center center; background-repeat: no-repeat; margin-left: 5px;
-            &.addthis_button_facebook { background-image: url(../i/ico_rightcol_share_facebook.png) }
-            &.addthis_button_twitter  { background-image: url(../i/ico_rightcol_share_twitter.png) }
-            &.addthis_button_email    { background-image: url(../i/ico_rightcol_share_email.png) }
-          }
-        }
-        .at15t, .at16nc, .at300bs { background: none }
-      }      
-    }
-
   }
 }
 
@@ -325,31 +325,6 @@ section.internal_page {
 /************************************************
 * POST    								        *
 ************************************************/
-
-.post { padding: 10px 0;  }
-.post h2 { }
-.post h2 a { }
-.post .entry { }
-.post .entry h3 { }
-.post .entry p { }
-.post .entry p a { }
-
-.post .entry blockquote {margin:1.5em 1.3em 0.5em; line-height:150%; color:#666; font-style:italic;}
-.post .entry cite {text-align:right; display:block; padding-right:15px;}
-.post .entry code {display:block; margin:1em 1.3em; color:#444; font-family:"courier new";}
-.post .entry ul {margin:0 1.3em; list-style:none;}
-.post .entry ul li {background:url("images/dotS.gif") no-repeat 0 6px; padding-left:10px; margin-bottom:7px;}
-.post .entry ol {margin:0 1em 0 3em;}
-.post .entry ol li {margin:0 0 7px 0;}
-
-.postMeta { color:#999; font-size:11px; margin-top:5px; padding:15px 0 0;  background:url("images/dot.gif") repeat-x 0 6px; position:relative;}
-.postMetaTop {color:#999; font-size:11px;}
-.postMetaTop span.author {}
-.postMetaTop span.category a {font-weight:bold;}
-.postMeta a, .postMetaTop a {}
-.postMeta span.date {}
-.postMeta span.comments {position:absolute; right:0;}
-.postMeta span.tag {}
 
 
 
@@ -483,7 +458,41 @@ h2.page-title {font-size:20px; margin-bottom:20px;}
 }
 
 
+/* pagina evento */
+body.tax-event-venue{
+  #content { margin-top: 280px; }
+  &.open-filters #content { margin-top: 360px }
+}
 
+/* pagina evento */
+body.single-conversations{
+  &.open-filters #content {  }
+  #content {
+    p.count-theme { text-transform: uppercase; font-size: 14px; }
+    h2{ border-top: 1px solid #414042; font-weight: 700; font-size: 40px; padding: 14px 0 38px 0; margin: 32px 0 0 0; }
+    .content_col{ width: 732px; border-top: 1px solid #414042; 
+      article{ border-bottom: 1px solid #414042; @include transition(all 1s ease); overflow: hidden; height: auto;
+        .letter, .comments { display: block; }
+        &.closed { 
+          .entry, .comments { display: none; }
+        }
+        .meta{ width: 100%; float: left; margin: 22px 0 45px 0; cursor: pointer;
+          h3{ text-transform: uppercase; float: left; 
+            strong { font-weight: 700; }
+          }
+          .date { float: right; }
+        }
+        .entry{
+          p, li { font-size: 19px; }
+          p{ margin-bottom: 1em; }
+        }
+      }
+      
+      p.show_comments { text-transform: uppercase; margin: 30px 0 40px 0; }
+      
+    }
+  }
+}
 
 
 
